# Skywing

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
design_code/: redcave_reqs.cpp  skynet.hpp
docker/: Dockerfile.skywing  README.md  docker-compose.yml  init_host.sh
docker/cookbook/: docker-compose.yml
documentation/tutorial/: 01. Introduction.md  02. Publishing and Subscribing.md  03. Iterative Methods.md
documentation/tutorial/ex1/: build.sh  ex1.cpp  meson.build  run.sh
examples/: meson.build
examples/admm/: admm.cpp  meson.build
examples/async_jacobi/: README.md  async_jacobi.cpp  jacobi_data_output.hpp  jacobi_pre_processing.py  meson.build  run.sh.in
examples/async_jacobi/system/: randomInteger_10_diagDom_100.mtx  rhs_randomInteger_10_diagDom_100.mtx  toy.mtx.orig  x_sol_toy.mtx
examples/asynchronous_iterative/: asynchronous_iterative.cpp  config.cfg  meson.build  run.sh.in
examples/bigfloat/: bigfloat.cpp  meson.build
examples/collective_count/: collective_count.cpp  meson.build  print_results.py  run.sh.in
examples/helics_hello_world/: README.md  helics_hello_world.cpp  meson.build  run.sh.in
examples/hello_world/: README.md  hello_world.cpp  meson.build  run.sh.in
examples/lc_hello_world/: call_executable.sh.in  generate_config_info.py  lc_hello_world.cpp  meson.build  run.sh.in  sbatch_script.sh.in
examples/mean_or_sum/: README.md  mean_or_sum.cpp  meson.build  print_results.py
examples/power_method/: meson.build  meson.build~  power_method.cpp  print_results.py  run.sh.in  run.sh.in~
examples/sync_jacobi/: README.md  jacobi_data_output.hpp  meson.build  run.sh.in  sync_jacobi.cpp
examples/sync_jacobi/system/: rhs_toy.mtx  x_sol_randomInteger_10_diagDom_100.mtx
hooks/: install_hooks.sh  pre-commit
include/devices/: Skynet_Device.hpp  Skynet_DeviceCommunicator.hpp  Skynet_SocketCommunicator.hpp
scripts/: .gitignore  build_clang_format.sh  log_splitter.py  tester_script.py
skywing/skywing_core/: basic_manager_config.cpp  basic_manager_config.hpp  enable_logging.hpp  job.cpp  job.hpp  manager.cpp  manager.hpp  meson.build  skywing.hpp  types.hpp  waiter.hpp
skywing/skywing_core/include/: publish_value_handler.hpp  socket_wrappers.hpp
skywing/skywing_core/internal/: capn_proto_wrapper.cpp  capn_proto_wrapper.hpp  endian_posix.hpp  endian_win.hpp  manager_waiter_callables.cpp  manager_waiter_callables.hpp  message_creators.cpp  message_creators.hpp  reduce_group.cpp  reduce_group.hpp  tag_buffer.hpp
skywing/skywing_core/internal/devices/: socket_communicator.cpp  socket_communicator.hpp  socket_wrappers_linux.cpp  socket_wrappers_osx.cpp
skywing/skywing_core/internal/utility/: algorithms.hpp  logging.hpp  mutex_guarded.hpp  network_conv.cpp  network_conv.hpp  overload_set.hpp  type_list.hpp
skywing/skywing_mid/: associative_vector.hpp  asynchronous_iterative.hpp  big_float.hpp  config_example.cfg  data_input.hpp  idempotent_processor.hpp  iterative_method.hpp  iterative_resilience_policies.hpp  jacobi_processor.hpp  meson.build  neighbor_data_handler.hpp  power_method_processor.hpp  publish_policies.hpp  pubsub_converter.hpp  push_flow_processor.hpp  push_sum_processor.hpp  quacc_processor.hpp  stop_policies.hpp  sum_processor.hpp  synchronous_iterative.hpp
skywing/skywing_mid/helpers/: skynet_config.hpp  skynet_helper.hpp
skywing/skywing_mid/internal/: iterative_helpers.hpp  pubsub_converter_helpers.hpp
subprojects/: .gitignore
subprojects/catch2/: meson.build
tests/: meson.build  run_tests.sh.in  test_runner.txt.in
tests/include/: utils.hpp
tests/skywing_core/: assorted.cpp  broadcast.cpp  broken_reduce.cpp  broken_subscribes.cpp  disconnect.cpp  heartbeat.cpp  ip_subscribe.cpp  publish_data_wrapper.cpp  publish_multiple_values.cpp  reduce_tag_bug.cpp  repeat_connection.cpp  self_subscribe.cpp  simple_reduce.cpp
tests/skywing_core/devices/: socket_communicator.cpp
tests/skywing_mid/: associative_vector.cpp  asynchronous_iterative.cpp  asynchronous_iterative.cpp~  count_test.cpp  iterative_test_stuff.hpp  iterative_test_stuff.hpp~  max_test.cpp  pubsub.cpp  stoppolicy_send.cpp  synchronous_iterative.cpp  synchronous_iterative.cpp~
